...
            }
        }
        LazyColumn(
            modifier = Modifier
                .fillMaxSize()
                .padding(horizontal = 16.dp)
                .testTag("LazyColumnTables"),

        ) {
            items(state.tables.size) {
                val customer = tablesViewModel.findReservationUserName(
                    state.reservations, state.customers, state.tables[it].id
                )
...
