...
                            )
                        }
                        Box(
                            modifier = Modifier
                                .weight(1f)
                                .clickable { onDelete() }
                                .testTag("DeleteReserveButton"),
                            contentAlignment = Alignment.Center
                        ) {
                            Icon(
                                painterResource(R.drawable.ic_delete),
                                tint = DarkGray,
                                contentDescription = "logo",
...
